--- a/static/styles/variables.css
+++ b/static/styles/variables.css
@@ -4,6 +4,7 @@
   --background-secondary: ##EFEFEF;
   --color: #2E2E2E;
   --outline-color: #FFFFFF;
+  --color-link: #67BAEA;
   --font: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans",
   Meiryo, sans-serif;
   --font-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
