--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,6 +1,7 @@
 .header {
   background: var(--theme-color);
   color: var(--outline-color);
+  margin-bottom: 16px;
 }
 
 .layout {
@@ -15,7 +16,7 @@
 .title {
   font-size: 24px;
   font-family: var(--font-strong);
-  margin-bottom: 2px
+  margin-bottom: 2px;
 }
 
 .icon {
@@ -23,6 +24,10 @@
 }
 
 @media screen and (min-width: 560px) {
+  .header {
+    margin-bottom: 24px;
+  }
+
   .layout {
     margin: 0 auto;
     padding: 0 32px;
@@ -36,6 +41,7 @@
   .icon {
     margin-left: 16px;
   }
+
   .icon img {
     height: 32px;
   }
