--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -1,9 +1,9 @@
-$theme-color: #0F4C81;
-$background-primary: #FFFFFF;
-$background-secondary: #EFEFEF;
-$color: #2E2E2E;
-$outline-color: #FFFFFF;
-$color-link: #67BAEA;
+$theme-color: #0f4c81;
+$background-primary: #fff;
+$background-secondary: #efefef;
+$color: #2e2e2e;
+$outline-color: #fff;
+$color-link: #67baea;
 $font: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans",
-Meiryo, sans-serif;
+  Meiryo, sans-serif;
 $font-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
