--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -7,3 +7,14 @@ $color-link: #67baea;
 $font: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans",
   Meiryo, sans-serif;
 $font-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
+
+$breakpoints: (
+  "tab": "screen and (min-width: 560px)",
+  "pc": "screen and (min-width: 960px)",
+) !default;
+
+@mixin mq($breakpoint: tab) {
+  @media #{map-get($breakpoints, $breakpoint)} {
+    @content;
+  }
+}
