--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -1,12 +1,14 @@
-$theme-color: #0f4c81;
-$background-primary: #fff;
-$background-secondary: #efefef;
-$color: #2e2e2e;
-$outline-color: #fff;
-$color-link: #67baea;
 $font: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans",
   Meiryo, sans-serif;
 $font-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
+
+$theme-color: #0f4c81;
+$background-primary: #efefef;
+$background-secondary: #fff;
+$color: #2e2e2e;
+$outline-color: #fff;
+$color-link: #67baea;
+$shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
 
 $breakpoints: (
   "tab": "screen and (min-width: 560px)",
