--- a/src/components/main.module.scss
+++ b/src/components/main.module.scss
@@ -6,8 +6,11 @@
   background: $background-secondary;
   box-shadow: $shadow;
 
+  @include mq() {
+    padding: 0 32px;
+  }
+
   @include mq(pc) {
     max-width: 880px;
-    padding: 0 32px;
   }
 }
