--- a/src/components/main.module.scss
+++ b/src/components/main.module.scss
@@ -2,12 +2,12 @@
 
 .main {
   width: 100vw;
-  padding: 0 16px;
+  padding: 16px;
   background: $background-secondary;
   box-shadow: $shadow;
 
   @include mq() {
-    padding: 0 32px;
+    padding: 32px;
   }
 
   @include mq(pc) {
