--- a/static/styles/global.scss
+++ b/static/styles/global.scss
@@ -6,3 +6,39 @@ body {
   color: $color;
   background: $background-primary;
 }
+
+.content p,
+.content table,
+.content blockquote,
+.content address,
+.content pre,
+.content iframe,
+.content form,
+.content figure,
+.content dl,
+.content ul,
+.content ol,
+.content hr {
+  margin-top: 16px;
+  line-height: 1.7;
+}
+
+.content h2 {
+  margin: 36px 0 16px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.content h3 {
+  margin: 20px 0 16px;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.content h4,
+.content h5,
+.content h6 {
+  margin: 16px 0 16px;
+  font-size: 16px;
+  font-weight: 600;
+}
