update content link

--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -7,7 +7,8 @@ $background-primary: #efefef;
 $background-secondary: #fff;
 $color: #2e2e2e;
 $outline-color: #fff;
-$color-link: #67baea;
+$color-link-primary: #67baea;
+$color-link-secondary: #0366d6;
 $shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
 
 $breakpoints: (
