--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -3,9 +3,10 @@ $font: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans",
 $font-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
 
 $theme-color: #0f4c81;
-$background-primary: #efefef;
+$background: #eee;
 $background-secondary: #fff;
 $color: #2e2e2e;
+$color-secondary: #999;
 $outline-color: #fff;
 $link-color: #0366d6;
 $shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
