--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -10,6 +10,7 @@ $color-secondary: #999;
 $outline-color: #fff;
 $link-color: #0366d6;
 $shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
+$shadow-dark: 0 3px 6px rgba(0, 0, 0, 0.24);
 
 $breakpoints: (
   "tab": "screen and (min-width: 560px)",
