--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -36,13 +36,20 @@
   }
 }
 
-.icon {
+.socials {
+  display: flex;
+}
+
+.link {
   margin-left: 8px;
 
   @include mq() {
     margin-left: 16px;
-    img {
-      height: 32px;
-    }
+  }
+}
+
+.icon {
+  @include mq() {
+    height: 32px;
   }
 }
