--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,3 +1,5 @@
+@import "../assets/styles/variables";
+
 .layout {
   display: flex;
   flex-flow: column;
@@ -7,4 +9,8 @@
 .content {
   flex: 1;
   margin: 0 auto;
+}
+
+.adsense {
+  margin-top: 32px;
 }
