--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,6 @@
 $font: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans",
   Meiryo, sans-serif;
-$font-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
+$font-strong: "Arial Black", "Helvetica Neue", "Arial Bold", Gadget, sans-serif;
 
 $theme-color: #0f4c81;
 $background: #eee;
