--- a/src/assets/styles/code.scss
+++ b/src/assets/styles/code.scss
@@ -1,12 +1,170 @@
+@import "./_variables.scss";
+
+code[class*="language-"],
+pre[class*="language-"] {
+  background: none;
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  font-size: 14px;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+
+/* Code blocks */
+pre[class*="language-"] {
+  padding: 16px;
+  margin: 16px -16px;
+  overflow: auto;
+
+  @include mq() {
+    padding: 16px 32px;
+    margin: 16px -32px;
+  }
+}
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #1b1f32;
+  color: #7289fd;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+  padding: 0.1em;
+  border-radius: 0.3em;
+  white-space: normal;
+}
+
+pre[class*="language-"]::-moz-selection,
+pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection,
+code[class*="language-"] ::-moz-selection,
+pre[class*="language-"]::selection,
+pre[class*="language-"] ::selection,
+code[class*="language-"]::selection,
+code[class*="language-"] ::selection {
+  text-shadow: none;
+  background: #4961da;
+}
+
+.token.comment,
+.token.block-comment,
+.token.prolog,
+.token.doctype,
+.token.cdata,
+.token.punctuation {
+  color: #51587b;
+}
+
+.token.namespace {
+  opacity: 0.7;
+}
+
+.token.tag,
+.token.operator,
+.token.number {
+  color: #4db0cb;
+}
+
+.token.property,
+.token.class-name,
+.token.constant,
+.token.symbol,
+.token.function {
+  color: #7289fd;
+}
+
+.token.tag-id,
+.token.selector,
+.token.atrule-id {
+  color: #e1e6ff;
+}
+
+code.language-javascript,
+.token.attr-name,
+.token.function-name {
+  color: #a5b3fe;
+}
+
+code.language-css,
+code.language-scss,
+.token.boolean,
+.token.string,
+.token.char,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.language-scss .token.string,
+.style .token.string,
+.token.attr-value,
+.token.keyword,
+.token.control,
+.token.directive,
+.token.unit,
+.token.statement,
+.token.regex,
+.token.atrule,
+.token.builtin {
+  color: #99e9ff;
+}
+
+.token.placeholder,
+.token.variable {
+  color: #99e9ff;
+}
+
+.token.deleted {
+  text-decoration: line-through;
+}
+
+.token.inserted {
+  text-decoration: none;
+  border-bottom: 1px dotted #e1e6ff;
+}
+
+.token.italic {
+  font-style: italic;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+
+.token.important {
+  color: #a5b3fe;
+}
+
+.token.entity {
+  cursor: help;
+}
+
+pre > code.highlight {
+  outline-offset: 0.4em;
+  outline: 0.4em solid #627af4;
+}
+
 .gatsby-code-title {
+  font-size: 14px;
   z-index: 0;
-  padding: 0.5em 1em;
-  margin-top: 16px;
-  margin-bottom: -0.6rem;
-  font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console",
-    "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono",
-    "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier,
-    monospace;
-  color: white;
-  background-color: black;
+  padding: 16px 16px 8px;
+  margin: 16px -16px -16px;
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  color: #a6aab9;
+  background-color: #1b1f32;
+
+  @include mq() {
+    padding: 16px 32px 8px;
+    margin: 16px -32px -16px;
+  }
 }
