--- a/src/assets/styles/code.scss
+++ b/src/assets/styles/code.scss
@@ -23,12 +23,12 @@ pre[class*="language-"] {
 /* Code blocks */
 pre[class*="language-"] {
   padding: 16px;
-  margin: 16px -16px;
+  margin: 16px -16px 0;
   overflow: auto;
 
   @include mq() {
     padding: 16px 32px;
-    margin: 16px -32px;
+    margin: 16px -32px 0;
   }
 }
 
@@ -158,13 +158,13 @@ pre > code.highlight {
   font-size: 14px;
   z-index: 0;
   padding: 16px 16px 8px;
-  margin: 16px -16px -16px;
+  margin: 16px -16px -20px;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   color: #a6aab9;
   background-color: #1b1f32;
 
   @include mq() {
     padding: 16px 32px 8px;
-    margin: 16px -32px -16px;
+    margin: 16px -32px -20px;
   }
 }
