--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,6 +8,7 @@ $background-secondary: #fff;
 $color: #2e2e2e;
 $color-secondary: #666;
 $outline-color: #fff;
+$border-color: #ccc;
 $link-color: #0366d6;
 $shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
 $shadow-dark: 0 3px 6px rgba(0, 0, 0, 0.24);
