--- a/src/assets/styles/code.scss
+++ b/src/assets/styles/code.scss
@@ -40,9 +40,8 @@ pre[class*="language-"] {
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-  padding: 0.1em;
+  padding: 2px 4px;
   white-space: normal;
-  border-radius: 0.3em;
 }
 
 pre[class*="language-"]::-moz-selection,
