--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -38,10 +38,10 @@ body {
     }
 
     blockquote {
-      border-left: 5px solid $border-color;
-      color: $color-secondary;
       padding: 16px 0 16px 16px;
       margin: 24px 0;
+      color: $color-secondary;
+      border-left: 5px solid $border-color;
 
       p {
         margin: 0;
@@ -72,27 +72,32 @@ body {
       font-weight: 600;
     }
 
-    ul,
-    ol {
+    ul {
       padding-left: 24px;
       margin: 24px 0;
+      list-style-type: disc;
 
       p {
         margin: 0;
       }
 
-      ul,
-      ol {
+      ul {
         margin: 0;
       }
     }
 
-    ul {
-      list-style-type: disc;
-    }
-
     ol {
+      padding-left: 24px;
+      margin: 24px 0;
       list-style-type: decimal;
+
+      p {
+        margin: 0;
+      }
+
+      ol {
+        margin: 0;
+      }
     }
 
     hr {
